plugins {
    id 'java-library'
}

group 'de.hhu.bsinfo'
version = getProperty('projectVersion')

compileJava {
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.foreign'])
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(19))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':core')
    implementation files('core-0.1.0-SNAPSHOT.jar')
    implementation "org.slf4j:slf4j-api:1.7.32"

    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.1"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.1"
}

test {
    useJUnitPlatform()
}
